VerificationCode/force-app/main/default/objects/Verification_Code__c/Verification_Code__c.object-meta.xml
<CustomObject>
    <description>Stores temporary email verification codes generated during the Salesforce login flow. Records are automatically expired and cleaned up after 24 hours.</description>
    <label>Verification Code</label>
    <nameField>
        <displayFormat>VC-{0000000}</displayFormat>
        <label>Verification Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>