VerificationCode/force-app/main/default/objects/Verification_Code__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of incorrect verification attempts made against this code. Incremented on each wrong entry; access is blocked at 3.</description>
    <label>Attempt Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>