VerificationCode/force-app/main/default/objects/Verification_Code__c/fields/Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Code_Hash__c</fullName>
    <description>SHA-256 hash of the verification code. The plain-text code is never stored.</description>
    <label>Code Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>