VerificationCode/force-app/main/default/objects/Verification_Code__c/fields/Expiry_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Time__c</fullName>
    <description>The exact date/time when this verification code expires (5 minutes after generation).</description>
    <label>Expiry Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>