VerificationCode/force-app/main/default/objects/Verification_Code__c/fields/Is_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this code has been successfully verified or explicitly invalidated (e.g., a new code was generated). Consumed codes are never re-accepted.</description>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>