VerificationCode/force-app/main/default/objects/Verification_Code__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user this verification code belongs to.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verification Codes</relationshipLabel>
    <relationshipName>Verification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>